--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <h1>Learning Git commands</h1>
-<p>This is the work done in feature2 branch</p>
+<p>This is the work done in feature2 branch.Add feature2 changes</p>
 <body>
     
 </body>
